<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".RegisterActivity">



    <EditText
        android:id="@+id/editPhone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/desired_phone"

        android:inputType="textPersonName"
        android:singleLine="true"
        tools:ignore="MissingConstraints">
    </EditText>

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:singleLine="true"

        app:layout_constraintTop_toBottomOf="@+id/editPhone"
        tools:ignore="MissingConstraints">
    </EditText>

    <EditText
        android:id="@+id/editConfirmPass"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/re_enter_password"
        android:inputType="textPassword"

        android:singleLine="true"
        app:layout_constraintTop_toBottomOf="@+id/editPassword"
        tools:ignore="MissingConstraints">
    </EditText>

    <EditText
        android:id="@+id/editFirstName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/desired_username"

        android:inputType="textPersonName"
        android:singleLine="true"
        app:layout_constraintTop_toBottomOf="@+id/editConfirmPass"
        tools:ignore="MissingConstraints">
    </EditText>

    <EditText
        android:id="@+id/editLastName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/enter_your_last_name"

        android:inputType="textPersonName"
        android:singleLine="true"
        app:layout_constraintTop_toBottomOf="@+id/editFirstName"
        tools:ignore="MissingConstraints">
    </EditText>

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/enter_valid_email"

        android:inputType="textEmailAddress"
        android:singleLine="true"
        app:layout_constraintTop_toBottomOf="@+id/editLastName"
        tools:ignore="MissingConstraints">
    </EditText>

    <Button
        android:id="@+id/register"

        android:layout_gravity="start"
        android:layout_width="200dp"
        android:layout_height="53dp"
        android:enabled="true"
        android:text="@string/action_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        android:layout_marginBottom="56dp"/>















</androidx.constraintlayout.widget.ConstraintLayout>